# rots

./: .gitignore  .pre-commit-config.yaml  0205-the-vision.md  CHANGELOG.rst  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  codeql.yml  release.yml
changelog.d/: 20260302_174712_delano_dns_commands.rst  20260311_140326_delano_fstring_logging.rst  20260311_194408_fix_container_name.rst  20260312_002134_delano_quadlet_auth_image_unit.rst  README.md  scriv.ini
docs/: HATCHET-SIDECAR-CONCEPT.md  SIDECAR-SPEC.md  remote-execution.md  testing.md
docs/architecture/decision-records/: adr-002.md
docs/wips/: 0205-00-environment-configuration-skeleton.md  0205-01-ots-host-config-push-HANDOFF.md  0205-01-the-vision-of-the-tooling.md  0205-02-four-layer-conceptual-model-draft.md  0205-02-four-layer-model-draft2.md  0205-03-layer0-dnsmasq.md  0205-04-layer0-dnsmasq-draft2.md  0205-04-layer1-sshtmux.md  0205-04-ots-host-config-push-HANDOFF.md  0205-04-the-vision-of-the-tooling-draft2.md  0205-04-three-layer-model.md  0205-05-layer1-sshtmux.md  0205-06-layer4-the-gateway-bastion.md  0205-07-the-vision-clearinghouse.md
scripts/: rename_to_rots.sh
src/ots_containers/: assets.py  cli.py  config.py  db.py  environment_file.py  podman.py  quadlet.py  systemd.py
src/ots_containers/commands/: __init__.py  assets.py  common.py  db.py  init.py
src/ots_containers/commands/cloudinit/: app.py  templates.py
src/ots_containers/commands/env/: app.py
src/ots_containers/commands/host/: __init__.py  _manifest.py  _rsync.py  app.py
src/ots_containers/commands/image/: app.py
src/ots_containers/commands/instance/: __init__.py  _helpers.py  app.py
src/ots_containers/commands/proxy/: _helpers.py  app.py
src/ots_containers/commands/service/: _helpers.py  app.py
src/rots/: __init__.py  __main__.py  assets.py  cli.py  config.py  context.py  db.py  environment_file.py  podman.py  quadlet.py  quadlet_schema.py  systemd.py
src/rots/commands/: README.md  __init__.py  assets.py  common.py  db.py  init.py  self.py
src/rots/commands/cloudinit/: __init__.py  app.py  templates.py
src/rots/commands/dns/: __init__.py  _helpers.py  app.py
src/rots/commands/env/: __init__.py  app.py
src/rots/commands/host/: __init__.py  _manifest.py  _rsync.py  app.py
src/rots/commands/image/: __init__.py  app.py
src/rots/commands/instance/: __init__.py  _helpers.py  annotations.py  app.py
src/rots/commands/proxy/: __init__.py  _helpers.py  app.py
src/rots/commands/service/: __init__.py  _helpers.py  app.py  packages.py
src/rots/commands/sidecar/: app.py
src/rots/sidecar/: __init__.py  allowlist.py  commands.py  handlers_rots.py  handlers_status.py  rabbitmq.py  socket.py
tests/: conftest.py  test_assets.py  test_cli.py  test_config.py  test_db.py  test_environment_file.py  test_image_build.py  test_image_reference_precedence.py  test_image_reference_security.py  test_main.py  test_parse_image_reference.py  test_podman.py  test_quadlet.py  test_quadlet_render.py  test_quadlet_schema.py  test_systemd.py
tests/commands/: test_assets.py  test_db_commands.py  test_env.py  test_init.py
tests/commands/cloudinit/: test_app.py  test_templates.py
tests/commands/dns/: test_db.py  test_helpers.py
tests/commands/host/: test_app.py  test_manifest.py  test_rsync.py
tests/commands/image/: test_app.py  test_build.py  test_image_ref_parsing.py
tests/commands/instance/: conftest.py  test_app.py  test_config_transform.py  test_deploy_image_ref.py  test_health_and_ps.py  test_helpers.py  test_run_image_ref.py  test_shell.py
tests/commands/proxy/: test_app.py  test_helpers.py
tests/commands/service/: test_app.py  test_helpers.py  test_packages.py
tests/integration/: conftest.py  test_smoke.py  test_ssh_remote.py
tests/sidecar/: test_allowlist.py  test_handlers_rots.py  test_socket.py
