# pyproject.toml
#
# Installation:
#   pipx install .                    # Recommended: isolated environment
#   pip install .                     # System-wide
#   pip install -e .                  # Development mode
#
# Verify: ots-containers --help

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ots-containers"
version = "0.3.2"
description = "Service orchestration for OneTimeSecret: Podman Quadlets and systemd service management"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "OneTime Secret", email = "ops@onetimesecret.com" }]
keywords = ["podman", "containers", "quadlet", "systemd", "onetimesecret", "valkey", "redis", "service-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = ["cyclopts>=3.9", "podman>=5.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pre-commit>=3.0", "pyright>=1.1.390"]
test = ["pytest>=8.0", "pytest-mock>=3.14", "pytest-cov>=6.0", "coverage>=7.10"]

[project.scripts]
ots-containers = "ots_containers.cli:app"

[project.urls]
Homepage = "https://onetimesecret.com"
Repository = "https://github.com/onetimesecret/ots-containers"
Issues = "https://github.com/onetimesecret/ots-containers/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/ots_containers"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E741"]  # Ambiguous variable names (l, O, I) - clear in modern fonts
