# pyproject.toml
#
# Installation:
#   pipx install .                    # Recommended: isolated environment
#   pip install .                     # System-wide
#   pip install -e .                  # Development mode
#
# Verify: rots --help

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rots"
version = "0.4.0"
description = "Service orchestration for OneTimeSecret: Podman Quadlets and systemd service management"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "OneTime Secret", email = "ops@onetimesecret.com" }]
keywords = ["podman", "containers", "quadlet", "systemd", "onetimesecret", "valkey", "redis", "service-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = ["cyclopts>=4.5", "ots-shared[ssh]>=0.1.0", "podman>=5.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pre-commit>=3.0", "pyright>=1.1.390", "ruff>=0.9"]
test = ["pytest>=8.0", "pytest-mock>=3.14", "pytest-cov>=6.0", "coverage>=7.10"]

[project.scripts]
rots = "rots.cli:main"

[project.urls]
Homepage = "https://onetimesecret.com"
Repository = "https://github.com/onetimesecret/rots"
Issues = "https://github.com/onetimesecret/rots/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/rots"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
extraPaths = ["../../ots_shared/src"]

[tool.coverage.run]
source = ["rots"]

[tool.coverage.report]
# Global minimum enforced by --cov-fail-under=70 in pytest invocation.
# Per-file baselines are enforced in CI via separate `coverage report --include` steps.
# Targets (raise these as test coverage improves):
#   cli.py              baseline 26%  target 80%
#   commands/db.py      baseline 29%  target 70%
show_missing = true
skip_empty = true

[tool.uv]
dev-dependencies = []

[tool.uv.workspace]
members = ["packages/ots-shared"]

[tool.uv.sources]
ots-shared = { workspace = true }

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E741"]  # Ambiguous variable names (l, O, I) - clear in modern fonts
